# ML

./: .gitignore  README.md
cf/: 4_for_lab.cpp  5_spusk.cpp  CMakeLists.txt  I.cpp  a.cpp  b.cpp  bayes_lab.cpp  c.cpp  d.cpp  e.cpp  f.cpp  g.cpp  h.cpp  l.cpp  learn.cpp  m.cpp  n.cpp  o.cpp  p.cpp  svm_lab.cpp
labs/AdaBoost/: main.py
labs/Bayes/: ROC.csv  dataset.txt  main.py
labs/CNN/: main.py  vosuALIZE.py
labs/DT/: main.py
labs/Knn/: main.py  prepared100.txt  prepared200.txt
labs/Linear/: main.py
labs/Svm/: main.py
